kubernetes/apps/penpot/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: penpot
  namespace: apps
spec:
  entryPoints:
    - websecure-external
  routes:
    - match: Host(`design.mcnees.me`)
      kind: Rule
      middlewares:
        - name: public-chain
          namespace: infrastructure
      services:
        - name: penpot-frontend
          port: 8080
  tls:
    secretName: legacy-public-wildcard-tls
